--- a/_posts/2022-06-06-上传头像教程.md
+++ b/_posts/2022-06-06-上传头像教程.md
@@ -6,6 +6,7 @@ date:       2022-06-06
 author:     "LitLuo"
 link-header: https://s2.loli.net/2022/06/06/xa9gA1Uj4ndK2Wk.png
 catalog: true
+mathjax: true
 tags:
     - 中育科教
     - 在线专栏
